Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <length>80</length>
    <type>Text</type>
</CustomField>