Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Current_salary_In_lack__c.field-meta.xml
<CustomField>
    <fullName>Current_salary_In_lack__c</fullName>
    <label>Current salary(In lack)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1</fullName>
            </value>
            <value>
                <fullName>1 - 2</fullName>
            </value>
            <value>
                <fullName>2 - 3</fullName>
            </value>
            <value>
                <fullName>3 - 4</fullName>
            </value>
            <value>
                <fullName>5 - 6</fullName>
            </value>
            <value>
                <fullName>6 - 7</fullName>
            </value>
            <value>
                <fullName>7 - 8</fullName>
            </value>
            <value>
                <fullName>8 - 9</fullName>
            </value>
            <value>
                <fullName>9 - 10</fullName>
            </value>
            <value>
                <fullName>&gt; 10 - 15</fullName>
            </value>
            <value>
                <fullName>&gt; 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>