Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1</fullName>
            </value>
            <value>
                <fullName>1 - 2</fullName>
            </value>
            <value>
                <fullName>2 - 3</fullName>
            </value>
            <value>
                <fullName>3 - 4</fullName>
            </value>
            <value>
                <fullName>4 - 5</fullName>
            </value>
            <value>
                <fullName>5 - 6</fullName>
            </value>
            <value>
                <fullName>6 - 7</fullName>
            </value>
            <value>
                <fullName>7 - 8</fullName>
            </value>
            <value>
                <fullName>8 - 9</fullName>
            </value>
            <value>
                <fullName>9 - 10</fullName>
            </value>
            <value>
                <fullName>10 - 12</fullName>
            </value>
            <value>
                <fullName>12 - 15</fullName>
            </value>
            <value>
                <fullName>&gt; 15 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>