Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Graduate_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Start_Year__c</fullName>
    <label>Graduate Start Year</label>
    <type>Date</type>
</CustomField>