Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Prefered_Location__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Location__c</fullName>
    <label>Prefered Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>