Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Professional_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Professional_Qualification__c</fullName>
    <label>Professional Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>Graduate In Agriculture</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>PostGraduate In Agriculture</fullName>
            </value>
            <value>
                <fullName>PostGraduate In Science</fullName>
            </value>
            <value>
                <fullName>Science Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>