Reetan.Nayak Dev 25/force-app/main/default/objects/Applicant__c/fields/Schooling__c.field-meta.xml
<CustomField>
    <fullName>Schooling__c</fullName>
    <label>Schooling</label>
    <length>80</length>
    <type>Text</type>
</CustomField>